--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeatherWise - Modern Weather App</title>
+    <title>Wizard - Modern Weather App</title>
     <style>
         * {
             margin: 0;
@@ -392,7 +392,7 @@
 
     <script>
         // API Configuration
-        const API_KEY = 'YOUR_API_KEY_HERE'; // Replace with your OpenWeatherMap API key
+        const API_KEY = '2837c95754930675c7b13e52abc89c60'; // Replace with your OpenWeatherMap API key
         const BASE_URL = 'https://api.openweathermap.org/data/2.5/weather';
 
         // DOM Elements
