--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
     <script>
         // API Configuration
-        const API_KEY = '2837c95754930675c7b13e52abc89c60'; // Replace with your OpenWeatherMap API key
+        const API_KEY = 2837c95754930675c7b13e52abc89c60; // Replace with your OpenWeatherMap API key
         const BASE_URL = 'https://api.openweathermap.org/data/2.5/weather';
 
         // DOM Elements
